--- a/templates/company.html
+++ b/templates/company.html
@@ -11,7 +11,7 @@
           <a href="/">Главная</a>
         </li>
         <li>
-          <a href="/">О нас</a>
+          <a href="/">Компания</a>
         </li>
         <li class="active">
           <a href="/company">
