fix: correct contact-form

--- a/templates/base.html
+++ b/templates/base.html
@@ -397,6 +397,10 @@
             </div>
           </div>
         </div>
+        <div class="row row--footer-main" style="display: flex; justify-content: center; gap: 20px;">
+            <a href="#" style="width: fit-content;"><img src="{% static '/image/epos.svg' %} " alt="epos" width="200px"></a>
+            <a href="#" style="width: fit-content;"><img src="{% static '/image/erip.svg' %} " alt="erip" width="200px"></a>
+        </div>
       </div>
       <div class="copyright-block">
         <div class="container">
