--- a/templates/contact.html
+++ b/templates/contact.html
@@ -89,22 +89,32 @@
           <form class="form-box-style">
             <div class="form-box-style__form-inner">
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Your name</h3>
-                <input class="form-control bg-white" type="text" placeholder="Enter your full name">
+                <h3 class="form-box-style-title">Как вас зовут?</h3>
+                <input class="form-control bg-white" type="text">
               </div>
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Email address</h3>
-                <input class="form-control bg-white" type="text" placeholder="Enter your email">
+                <h3 class="form-box-style-title">Как называется компания?</h3>
+                <input class="form-control bg-white" type="text">
               </div>
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Write your message</h3>
+                <h3 class="form-box-style-title">Номер телефона для связи</h3>
+                <input class="form-control bg-white" type="text">
+              </div>
+              <div class="form-box-style__form-input">
+                <h3 class="form-box-style-title">E-mail для предложений и коммуникации</h3>
+                <input class="form-control bg-white" type="text">
+              </div>
+              <div class="form-box-style__form-input">
+                <h3 class="form-box-style-title">Краткие вводные</h3>
                 <textarea class="form-control bg-white textarea"
-                  placeholder="Write us your question here..."></textarea>
+                  placeholder=""></textarea>
               </div>
             </div>
           </form>
+          <p>Боль, проблема, задача, запрос, желание, фантазия - если что-то из этого есть, опишите это тут. Если ничего нет или пока не готовы - поставьте прочерк.</p>
+          <span>Нажимая кнопку «Отправить», я принимаю условия пользовательского соглашения и даю согласие на обработку моих персональных данных на условиях и для целей, определенных в Согласии на обработку персональных данных. *</span>
           <div class="form-box-style__form-input-button">
-            <button type="submit" class="btn-masco rounded-pill w-100">Submit</button>
+            <button type="submit" class="btn-masco rounded-pill w-100">Отправить</button>
           </div>
         </div>
       </div>
